clean warnings from marytts-runtime